force-app/main/default/objects/Mass_Action_Batch_Apex_Status_Event__e/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <description>Pairs to the Job ID field on Mass Action Log object.</description>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>