force-app/main/default/objects/Mass_Action_Batch_Apex_Status_Event__e/fields/Job_Scope__c.field-meta.xml
<CustomField>
    <fullName>Job_Scope__c</fullName>
    <description>Pairs to the Message Type field on Mass Action Log object.</description>
    <label>Job Scope</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>