force-app/main/default/objects/Mass_Action_Batch_Apex_Status_Event__e/fields/Long_Message__c.field-meta.xml
<CustomField>
    <fullName>Long_Message__c</fullName>
    <description>Pairs to the Long Message field on Mass Action Log object.</description>
    <label>Long Message</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>