force-app/main/default/objects/Mass_Action_Batch_Apex_Status_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Pairs to the Message field on Mass Action Log object.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>