force-app/main/default/objects/Mass_Action_Batch_Apex_Status_Event__e/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>Pairs to the Message Type field on Mass Action Log object.</description>
    <label>Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>