force-app/main/default/objects/Mass_Action_Batch_Apex_Status_Event__e/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Mirror of the the Phase field on BatchApexErrorEvent. Indicates what phase of a batch job this event occurred, such as start, execute, or finish.</description>
    <label>Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>